force-app/main/default/objects/ssot__BulkMessage__dlm/fields/ssot__CommunicationSubscriptionChannelTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CommunicationSubscriptionChannelTypeId__c</fullName>
    <label>Communication Subscription Channel Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CommunicationSubscriptionChannelTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>