force-app/main/default/objects/ssot__BulkMessage__dlm/fields/ssot__DigitalContentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DigitalContentId__c</fullName>
    <label>Digital Content</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DigitalContentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>