force-app/main/default/objects/ssot__BulkMessage__dlm/fields/ssot__rel_1696932794785_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1696932794785_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BulkMessage_CommunicationSubscriptio_rel</label>
    <referenceTo>ssot__CommunicationSubscriptionChannelType__dlm</referenceTo>
    <relationshipLabel>BulkMessage_CommunicationSubscriptio_rel</relationshipLabel>
    <relationshipName>rel_1696932794785_end</relationshipName>
    <type>Lookup</type>
</CustomField>