force-app/main/default/objects/ssot__BulkMessage__dlm/fields/ssot__rel_1702009183408_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009183408_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BulkMessage_DigitalContentId_map_Dig_rel</label>
    <referenceTo>ssot__DigitalContent__dlm</referenceTo>
    <relationshipLabel>BulkMessage_DigitalContentId_map_Dig_rel</relationshipLabel>
    <relationshipName>rel_1702009183408_end</relationshipName>
    <type>Lookup</type>
</CustomField>