force-app/main/default/objects/ssot__BulkMessage__dlm/fields/ssot__rel_1702009183708_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009183708_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BulkMessage_FlowElementId_map_FlowEl_rel</label>
    <referenceTo>ssot__FlowElement__dlm</referenceTo>
    <relationshipLabel>BulkMessage_FlowElementId_map_FlowEl_rel</relationshipLabel>
    <relationshipName>rel_1702009183708_end</relationshipName>
    <type>Lookup</type>
</CustomField>